feature: 프로젝트, 협력사, 매출, 구성원 요약 api 추가